--- a/Admin Panel/password.html
+++ b/Admin Panel/password.html
@@ -18,21 +18,17 @@
           <img src="./images/logo_header.png" alt="logo" class="login__logo">
           <form action="#">
             <div class="form-group">
-              <input type="text" class="form-control" id="user" name="user" placeholder="Username or email address"
-                required>
-            </div>
-            <div class="form-group">
               <input type="password" class="form-control" id="user" name="user" placeholder="Password" required>
             </div>
-            <div class="custom-control custom-checkbox mb-3 mt-3">
-              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-              <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
-            </div>
             <div class="form-group">
-              <input type="submit" class="btn btn-block" id="user" name="user" placeholder="Password" value="Login">
+              <input type="password" class="form-control" id="user" name="user" placeholder="Repeat Password" required>
+            </div>
+
+            <div class="form-group">
+              <input type="submit" class="btn btn-block" id="user" name="user" placeholder="Password" value="Recover">
             </div>
             <div class="lost_password text-center">
-              <a href="#">Lost Password?</a>
+              <a href="#">Back to login</a>
             </div>
           </form>
         </div>
