Admin Panel -  Skeleton  done

--- a/Admin Panel/index.html
+++ b/Admin Panel/index.html
@@ -10,23 +10,6 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <body>
   <div class="body">
     <div class="main-container">
@@ -40,43 +23,47 @@
         </button>
         <nav>
           <ul class="nav flex-column">
-            <li class="active"><a class="nav-link active" href="#"> <i class="mdi mdi-view-dashboard" aria-hidden="true"></i>
-              <span>Dashboard</span></a></li>
+            <li class="active"><a class="nav-link active" href="#"> <i class="mdi mdi-view-dashboard"
+                  aria-hidden="true"></i>
+                <span>Dashboard</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-cog-outline" aria-hidden="true"></i>
-            <span>Settings</span></a></li>
-            <li><a class="nav-link active" href="#"> <i class="mdi mdi-sticker-outline" aria-hidden="true"></i> <span>Website
-              Support Ticket</span></a></li>
+                <span>Settings</span></a></li>
+            <li><a class="nav-link active" href="#"> <i class="mdi mdi-sticker-outline" aria-hidden="true"></i>
+                <span>Website
+                  Support Ticket</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-folder-edit" aria-hidden="true"></i>
-              <span>Cms</span></a></li>
+                <span>Cms</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-checkbox-blank-outline" aria-hidden="true"></i>
-              <span>Blocks</span></a></li>
-            <li><a class="nav-link active" href="#"> <i class="mdi mdi-ticket-confirmation-outline" aria-hidden="true"></i>
-              <span>Coupons</span></a></li>
+                <span>Blocks</span></a></li>
+            <li><a class="nav-link active" href="#"> <i class="mdi mdi-ticket-confirmation-outline"
+                  aria-hidden="true"></i>
+                <span>Coupons</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-calculator" aria-hidden="true"></i> <span>Tax
-              Calculator</span></a></li>
+                  Calculator</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-sim" aria-hidden="true"></i> <span>Sim
-              Managment</span></a></li>
+                  Managment</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-view-list-outline" aria-hidden="true"></i>
-              <span>Modules</span></a></li>
+                <span>Modules</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-toy-brick-outline" aria-hidden="true"></i>
-              <span>Plugins</span></a></li>
-            <li><a class="nav-link active" href="#"> <i class="mdi mdi-cellphone-android" aria-hidden="true"></i> <span>Phone
-              Services</span></a></li>
+                <span>Plugins</span></a></li>
+            <li><a class="nav-link active" href="#"> <i class="mdi mdi-cellphone-android" aria-hidden="true"></i>
+                <span>Phone
+                  Services</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-account-multiple-outline" aria-hidden="true"></i>
-              <span>Users</span></a></li>
+                <span>Users</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-cart-outline" aria-hidden="true"></i>
-              <span>Plans</span></a></li>
+                <span>Plans</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-account-tie" aria-hidden="true"></i>
-              <span>Customer</span></a></li>
+                <span>Customer</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-cellphone-wireless" aria-hidden="true"></i>
-              <span>Subscribers</span></a></li>
+                <span>Subscribers</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-alpha-b-box" aria-hidden="true"></i>
-              <span>Orders</span></a></li>
+                <span>Orders</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-credit-card-outline" aria-hidden="true"></i>
-              <span>Billing</span></a></li>
+                <span>Billing</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-alpha-b-box" aria-hidden="true"></i> <span>Tax
-              Collected</span></a></li>
-              <li><a class="nav-link active" href="#"> <i class="mdi mdi-email-outline" aria-hidden="true"></i>
+                  Collected</span></a></li>
+            <li><a class="nav-link active" href="#"> <i class="mdi mdi-email-outline" aria-hidden="true"></i>
                 <span>Newsletter Subscriptions</span></a></li>
           </ul>
 
@@ -86,6 +73,87 @@
         </nav>
       </div>
       <div class="main-content">
+
+        <section class="main-content__header">
+          <div class="container">
+            <div class="row main-content__header__content">
+              <div class="col-auto main-content__header__summary">
+                <ul class="nav">
+                  <li class="main-content__header__summary__item">
+                    <a href="#">
+                      <img src="./images/total.svg" alt="">
+                      <span>
+                        <i>Total:</i>
+                        <b>300</b>
+                      </span>
+                    </a>
+                  </li>
+                  <li class="main-content__header__summary__item">
+                    <a href="#">
+                      <img src="./images/suspended.svg" alt="">
+                      <span>
+                        <i>Suspended:</i>
+                        <b>12</b>
+                      </span>
+                    </a>
+
+                  </li>
+                  <li class="main-content__header__summary__item">
+                    <a href="#">
+                      <img src="./images/canceled.svg" alt="">
+                      <span>
+                        <i>Canceled:</i>
+                        <b>12</b>
+                      </span>
+                    </a>
+
+                  </li>
+                </ul>
+              </div>
+              <div class="col-auto main-content__header__search">
+                <form action="">
+                  <div class="main-content__header__search__container">
+
+                    <input type="text" placeholder="search...">
+                    <select name="" id="">
+                      <option value="1">In active</option>
+                      <option value="1">In active</option>
+                      <option value="1">In active</option>
+                    </select>
+                    <input class="" type="submit">
+
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
+        <section class="main-content__body">
+
+        </section>
+
+
+        <section class="main-content__footer">
+          <div class="container">
+            <button type="button" class="btn btn-sm btn-fill"><i class="mdi mdi-play" aria-hidden="true"></i>
+              Activation</button>
+            <button type="button" class="btn btn-sm "><i class="mdi mdi-import" aria-hidden="true"></i>
+              Port In</button>
+            <button type="button" class="btn btn-sm "><i class="mdi mdi-pause" aria-hidden="true"></i>
+              Suspend</button>
+            <button type="button" class="btn btn-sm "><i class="mdi mdi-play-pause" aria-hidden="true"></i>
+              UnSuspend</button>
+            <button type="button" class="btn btn-sm "><i class="mdi mdi-stop" aria-hidden="true"></i>
+              Cancel</button>
+            <button type="button" class="btn btn-sm "><i class="mdi mdi-close-thick" aria-hidden="true"></i>
+              Cancel Portin
+            </button>
+          </div>
+
+        </section>
+
 
       </div>
     </div>
