Admin Panel - Data Table, Dashboard and subscriber View done

--- a/Admin Panel/dashboard.html
+++ b/Admin Panel/dashboard.html
@@ -130,6 +130,99 @@
         </section>
 
         <section class="main-content__body">
+          <div class="container">
+            <div class="main-content__body__header">
+              <h2>Dashboard</h2>
+              <div class="main-content__body__header__actions">
+                <a href="#" class="btn btn-lg"><i class="mdi mdi-plus-circle" aria-hidden="true"></i> Add a
+                  Subscriber</a>
+              </div>
+            </div>
+            <div class="main-content__body__content">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="info-block">
+                        <div class="info-block__icon">
+                          <img src="./images/money.svg" alt="img">
+                        </div>
+                        <div class="info-block__content">
+                          <h3 class="info-block__content__title">Data Sold</h3>
+                          <div class="info-block__content__value">210.00gb</div>
+                          <p class="info-block__content__difference">+5.23</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="info-block">
+                        <div class="info-block__icon">
+                          <img src="./images/download.svg" alt="img">
+                        </div>
+                        <div class="info-block__content">
+                          <h3 class="info-block__content__title">Data Sold</h3>
+                          <div class="info-block__content__value">210.00gb</div>
+                          <p class="info-block__content__difference increase">+5.23</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="info-block">
+                        <div class="info-block__icon">
+                          <img src="./images/data.svg" alt="img">
+                        </div>
+                        <div class="info-block__content">
+                          <h3 class="info-block__content__title">Data Sold</h3>
+                          <div class="info-block__content__value">210.00gb</div>
+                          <p class="info-block__content__difference decrease">+5.23</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="info-block">
+                        <div class="info-block__icon">
+                          <img src="./images/wifi.svg" alt="img">
+                        </div>
+                        <div class="info-block__content">
+                          <h3 class="info-block__content__title">Data Sold</h3>
+                          <div class="info-block__content__value">210.00gb</div>
+                          <p class="info-block__content__difference">+5.23</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="info-block">
+                        <div class="info-block__icon">
+                          <img src="./images/company.svg" alt="img">
+                        </div>
+                        <div class="info-block__content">
+                          <h3 class="info-block__content__title">Data Sold</h3>
+                          <div class="info-block__content__value">210.00gb</div>
+                          <p class="info-block__content__difference">+5.23</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </section>
 
