Admin Panel - Modal Done

--- a/Admin Panel/dashboard.html
+++ b/Admin Panel/dashboard.html
@@ -72,7 +72,7 @@
 
         </nav>
       </div>
-      <div class="main-content">
+      <div class="main-content footer-background">
 
         <section class="main-content__header">
           <div class="container">
