--- a/Admin Panel/login.html
+++ b/Admin Panel/login.html
@@ -29,7 +29,8 @@
               <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
             </div>
             <div class="form-group">
-              <input type="submit" class="btn btn-block" id="user" name="user" placeholder="Password" value="Login">
+              <input type="submit" class="btn btn-block btn-primary" id="user" name="user" placeholder="Password"
+                value="Login">
             </div>
             <div class="lost_password text-center">
               <a href="#">Lost Password?</a>
