User Frontend - Home page Done

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -211,25 +211,125 @@
           </div>
         </section>
 
-        <section class="main-content__footer">
-          <div class="container">
-            <button type="button" class="btn btn-sm btn-fill"><i class="mdi mdi-play" aria-hidden="true"></i>
-              Activation</button>
-            <button type="button" class="btn btn-sm "><i class="mdi mdi-import" aria-hidden="true"></i>
-              Port In</button>
-            <button type="button" class="btn btn-sm "><i class="mdi mdi-pause" aria-hidden="true"></i>
-              Suspend</button>
-            <button type="button" class="btn btn-sm "><i class="mdi mdi-play-pause" aria-hidden="true"></i>
-              UnSuspend</button>
-            <button type="button" class="btn btn-sm "><i class="mdi mdi-stop" aria-hidden="true"></i>
-              Cancel</button>
-            <button type="button" class="btn btn-sm "><i class="mdi mdi-close-thick" aria-hidden="true"></i>
-              Cancel Portin
-            </button>
-          </div>
-
+        <section class="block-coverage">
+          <img src="./images/map.jpg" alt="map" class="" style="width:100%;">
         </section>
 
+        <section class="block-of-info">
+          <div class="container">
+            <div class="row">
+
+              <div class="col-sm-4 mb-4">
+                <div class="block-of-info__item">
+                  <img src="./images/nationwide_coverage.png" alt="" class="block-of-info__icon">
+                  <h3 class="block-of-info__title">Nationwide Coverage</h3>
+                  <div class="block-of-info__text">
+                    <p>We use the same fast and dependable networks as the big guys. You can count on our service
+                      whether you’re
+                      at home or on the go.</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-4 mb-4">
+                <div class="block-of-info__item">
+                  <img src="./images/bring_your_own_device.png" alt="" class="block-of-info__icon">
+                  <h3 class="block-of-info__title">Bring Your Own Device</h3>
+                  <div class="block-of-info__text">
+                    <p>Did you know that you can use your own device on Faith Wireless? If your phone is compatible,
+                      you’ll only need a sim card to get started.</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-4 mb-4">
+                <div class="block-of-info__item">
+                  <img src="./images/growing_gods_kingdom.png" alt="" class="block-of-info__icon">
+                  <h3 class="block-of-info__title">Growing God's Kingdom</h3>
+                  <div class="block-of-info__text">
+                    <p>Faith Wireless donates 10% of your monthly plan to the Christian organization of your choice.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </section>
+
+        <section class="block-mission">
+          <!-- endTrigger: "#otherID", -->
+          <div class="container max-width-530 mb-4">
+            <h3 class="title text-center">Our Mission</h3>
+            <p class="subtitle text-center">ten percent of your cell phone payment goes directly to
+              the Christian
+              organization of
+              your choice.</p>
+          </div>
+          <div class="container max-width-830">
+            <div class="row">
+              <div class="col-sm-6 ">
+                <p class="text max-width-360">Faith Wireless provides affordable plans for talk, text, and data
+                  on the same major
+                  networks as the big carriers. That way, we are able to provide the same exact quality of nationwide
+                  service that you have come to count on.</p>
+              </div>
+              <div class="col-sm-1">
+              </div>
+              <div class="col-sm-5">
+                <p class="text max-width-360">Faith Wireless doesn’t just provide affordable cell phone service. We help
+                  grow
+                  Christian organizations by donating ten percent of every cell phone payment.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="church-container" id="church">
+            <img src="./images/church___1.png" id="church___1" class="img-fluid" alt="church___1">
+            <img src="./images/church___2.png" id="church___2" class="img-fluid" alt="church___2">
+            <img src="./images/church___3.png" id="church___3" class="img-fluid" alt="church___3">
+            <img src="./images/church___4.png" id="church___4" class="img-fluid" alt="church___4">
+          </div>
+        </section>
+
+        <section class="block-help-build">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5">
+                <img src="./images/hand.png" class="img-fluid" alt="Help Build Your Faith Through Our Service!">
+              </div>
+              <div class="col-md-7 mb-5">
+                <h2 class="title-big mb-4">Help Build Your Faith Through Our Service!</h2>
+                <a href="#" class="btn-big">Signup Now</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <footer class="footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-auto"><img src="./images/logo_header.svg" width="130" alt=""></div>
+              <div class="col-md-auto ml-auto mr-auto">
+                <div class="footer-copy">
+                  <div class="footer-links">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
+                  </div>
+                  <p>Copyright 2018 Faith Wireless, 1307 Hodges Street, Raleigh, NC. All Rights Reserved </p>
+                </div>
+              </div>
+              <div class="col-md-auto">
+                <div class="footer-social">
+                  <a href="#"><i class="mdi mdi-twitter" aria-hidden="true"></i></a>
+                  <a href="#"><i class="mdi mdi-facebook" aria-hidden="true"></i></a>
+                  <a href="#"><i class="mdi mdi-youtube" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
 
       </div>
     </div>
@@ -243,6 +343,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+
   <script src="./js/app.js"></script>
 </body>
 
