--- a/Frontend/choose_a_plan_v2.html
+++ b/Frontend/choose_a_plan_v2.html
@@ -71,11 +71,83 @@
 
 
       </header>
-      <div class="main-content">
+      <div class="main-content use-background ">
 
 
 
+        <section class="block-pricing block-pricing-2">
+          <div class="container">
+            <h2 class="text-center title-big mb-5">Choose a Plan</h2>
+            <div class="row">
+              <div class="col-sm-6 col-lg-3 mb-4">
+                <div class="card block-pricing__item">
+                  <div class="card-header card-header-1 petter">
 
+                    5GB
+
+                  </div>
+                  <div class="card-body">
+
+
+                    <div class="block-pricing__interval-2 mt-4 mb-2">5GB <i></i> $<span>45.00/mo</span> </div>
+
+                    <a href="" class="btn btn-fill mb-4">Choose</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-lg-3 mb-4">
+                <div class="card block-pricing__item">
+                  <div class="card-header card-header-1 petter">
+
+                    5GB
+
+                  </div>
+                  <div class="card-body">
+
+
+                    <div class="block-pricing__interval-2 mt-4 mb-2">5GB <i></i> $<span>45.00/mo</span> </div>
+
+                    <a href="" class="btn btn-fill mb-4">Choose</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-lg-3 mb-4">
+                <div class="card block-pricing__item">
+                  <div class="card-header card-header-1 petter">
+
+                    5GB
+
+                  </div>
+                  <div class="card-body">
+
+
+                    <div class="block-pricing__interval-2 mt-4 mb-2">5GB <i></i> $<span>45.00/mo</span> </div>
+
+                    <a href="" class="btn btn-fill mb-4">Choose</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-lg-3 mb-4">
+                <div class="card block-pricing__item popular">
+                  <div class="card-header card-header-2 petter-2">
+                    <img src="./images/review.svg" alt="">
+                    Unlimited
+                    <div>Data</div>
+                  </div>
+                  <div class="card-body">
+
+                    <div class="block-pricing__interval-2 mt-4 mb-2">5GB <i></i> $<span>45.00/mo</span> </div>
+
+                    <a href="" class="btn btn-fill mb-4">Choose</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
 
 
