User Frontend - Flow for Choose a Plan Done

--- a/Frontend/need_a_phone.html
+++ b/Frontend/need_a_phone.html
@@ -76,96 +76,48 @@
 
 
         <div class="container">
-
-          <div class="max-width-880 frontend-login">
-            <div class="login-nav">
-              <a href="#" data-target="#frontend-login__block-1" class="active">Login</a>
-              <a href="#" data-target="#frontend-login__block-2">Register</a>
+          <div class="main-content-header main-content-header-center">
+            <div class="steps">
+              <a class="steps__item active" href="#"><i class="mdi mdi-check-bold" aria-hidden="true"></i>
+              </a>
+              <a class="steps__item undone" href="#"><i class="mdi mdi-cellphone-iphone" aria-hidden="true"></i>
+              </a>
             </div>
+            <h2 class="title mb-4">Do You Need A Phone?</h2>
+          </div>
+          <div class="max-width-880 mt-0 pt-0">
             <div class="row">
-              <div class="col-md-6 mb-5 active" id="frontend-login__block-1">
+              <div class="col-6 small-box-select-phone">
                 <div class="card">
-                  <div class="card-body ">
-                    <h2 class="title-2 text-center pt-3 mb-0">
-                      Login
-                    </h2>
-                    <form action="">
-                      <div class="max-width-300">
-                        <div class="form-group mt-0">
-                          <label for="user">Username or email address</label>
-                          <input type="text" class="form-control" name="user" id="user" aria-describedby="user"
-                            placeholder="Username or email address">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="last-name">Password</label>
-                          <input type="text" class="form-control" id="password" name="password"
-                            aria-describedby="password" placeholder="Password">
-                        </div>
-                        <p class="mt-3 mb-3 text-center">Or login with:</p>
-                        <div class="social-login text-center mb-1">
-                          <a href="" class="pl-1 pr-1"><img src="./images/login___facebook.svg" alt="Facebook"></a>
-                          <a href="" class="pl-1 pr-1"><img src="./images/login___linkedin.png" alt="Linkedin"></a>
-                          <a href="" class="pl-1 pr-1"><img src="./images/login___twiter.svg" alt="Twitter"></a>
-                        </div>
-                        <div class="custom-control custom-checkbox mb-0 mt-3 max-width-200">
-                          <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-                          <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
-                        </div>
-                        <div class=" text-center mt-2 pt-3 mb-4">
-                          <input type="submit" value="Login" class="min-width-260 btn btn-primary btn-lg">
-                          <div class="pt-3">
-                            <a href="#" class="custom-link">Lost Password?</a>
-                          </div>
-                        </div>
+                  <div class="card-body text-center">
+                    <a href="#" class="d-block max-width-270  pt-5 pb-5">
+                      <img src="./images/no__use__my__own.png" alt="">
+                      <h2 class="title-4 text-center pt-3 mb-0">
+                        No, Use My Own
+                      </h2>
+                      <div class="text">
+                        Check the eligibility of your device
                       </div>
+                    </a>
 
-
-
-                    </form>
 
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 mb-5" id="frontend-login__block-2">
+              <div class="col-6 small-box-select-phone">
                 <div class="card">
-                  <div class="card-body">
-                    <h2 class="title-2 text-center pt-3 mb-0">
-                      Register
-                    </h2>
-                    <form action="">
-                      <div class="max-width-300">
-                        <div class="form-group mt-0">
-                          <label for="user">Email address</label>
-                          <input type="text" class="form-control" name="user" id="user" aria-describedby="user"
-                            placeholder="Email address">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="password">Password</label>
-                          <input type="text" class="form-control" id="password" name="password"
-                            aria-describedby="password" placeholder="Password">
-                        </div>
-
-                        <div class="form-group pb-3">
-                          <label for="confirm-password">Confirm Password</label>
-                          <input type="text" class="form-control" id="confirm-password" name="confirm-password"
-                            aria-describedby="password" placeholder="Confirm Password">
-                        </div>
-
-                        <div class="text-center mt-4 pt-4 mb-4">
-                          <input type="submit" value="Register" class="min-width-260 btn btn-primary btn-lg">
-                          <div class="pt-3">
-                            <a href="#" class="custom-link custom-link-2 "><i class="mdi mdi-help-circle-outline mr-1"
-                                aria-hidden="true"></i>
-                              Disclaimer</a>
-                          </div>
-                        </div>
+                  <div class="card-body text-center">
+                    <a href="#" class="d-block max-width-270 pt-5 pb-5">
+                      <img src="./images/yes__buy_a__new__one.png" alt="">
+                      <h2 class="title-4 text-center pt-3 mb-0">
+                        Yes, Buy a New One
+                      </h2>
+                      <div class="text">
+                        Get Samsung Galaxy Express Prime 3 for only $139
                       </div>
+                    </a>
 
 
-
-                    </form>
                   </div>
                 </div>
               </div>
