--- a/Frontend/plan.html
+++ b/Frontend/plan.html
@@ -75,98 +75,79 @@
 
 
 
-        <div class="container">
-
-          <div class="max-width-880 frontend-login">
-            <div class="login-nav">
-              <a href="#" data-target="#frontend-login__block-1" class="active">Login</a>
-              <a href="#" data-target="#frontend-login__block-2">Register</a>
-            </div>
-            <div class="row">
-              <div class="col-md-6 mb-5 active" id="frontend-login__block-1">
-                <div class="card">
-                  <div class="card-body ">
-                    <h2 class="title-2 text-center pt-3 mb-0">
-                      Login
-                    </h2>
-                    <form action="">
-                      <div class="max-width-300">
-                        <div class="form-group mt-0">
-                          <label for="user">Username or email address</label>
-                          <input type="text" class="form-control" name="user" id="user" aria-describedby="user"
-                            placeholder="Username or email address">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="last-name">Password</label>
-                          <input type="text" class="form-control" id="password" name="password"
-                            aria-describedby="password" placeholder="Password">
-                        </div>
-                        <p class="mt-3 mb-3 text-center">Or login with:</p>
-                        <div class="social-login text-center mb-1">
-                          <a href="" class="pl-1 pr-1"><img src="./images/login___facebook.svg" alt="Facebook"></a>
-                          <a href="" class="pl-1 pr-1"><img src="./images/login___linkedin.png" alt="Linkedin"></a>
-                          <a href="" class="pl-1 pr-1"><img src="./images/login___twiter.svg" alt="Twitter"></a>
-                        </div>
-                        <div class="custom-control custom-checkbox mb-0 mt-3 max-width-200">
-                          <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-                          <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
-                        </div>
-                        <div class=" text-center mt-2 pt-3 mb-4">
-                          <input type="submit" value="Login" class="min-width-260 btn btn-primary btn-lg">
-                          <div class="pt-3">
-                            <a href="#" class="custom-link">Lost Password?</a>
-                          </div>
-                        </div>
-                      </div>
-
-
-
-                    </form>
-
+        <div class="container select-a-plan">
+          <div class="card ">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-6 select-a-plan-img">
+                  <img src="./images/phone__plan.svg" alt="">
+                  <div class="select-a-plan-details">
+                    <div class="select-a-plan-count change-value-count">
+                      1
+                    </div>
+                    <div class="select-a-plan-unit change-value-unit">
+                      GB
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6 mb-5" id="frontend-login__block-2">
-                <div class="card">
-                  <div class="card-body">
-                    <h2 class="title-2 text-center pt-3 mb-0">
-                      Register
-                    </h2>
-                    <form action="">
-                      <div class="max-width-300">
-                        <div class="form-group mt-0">
-                          <label for="user">Email address</label>
-                          <input type="text" class="form-control" name="user" id="user" aria-describedby="user"
-                            placeholder="Email address">
+                <div class="col-md-6 select-a-plan__content">
+                  <div class="max-width-360 ">
+                    <ul class="nav nav-pills select-a-plan__content__nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#" data-count="1" data-unit="GB" data-price="25.00"
+                          data-removeclass="small-text">1GB</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" data-count="3" data-unit="GB" data-price="26.00"
+                          data-removeclass="small-text">3GB</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" data-count="5" data-unit="GB" data-price="27.00"
+                          data-removeclass="small-text">5GB</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" data-count="&infin;" data-unit="Unlimited" data-price="28.00"
+                          data-class="small-text">Unlimited</a>
+                      </li>
+                    </ul>
+                    <div class="select-a-plan__content__img">
+                      <img src="./images/phone__plan.svg" alt="">
+                      <div class="select-a-plan__content__img-details">
+                        <div class="select-a-plan__content__img-count">
+                          1
                         </div>
-
-                        <div class="form-group">
-                          <label for="password">Password</label>
-                          <input type="text" class="form-control" id="password" name="password"
-                            aria-describedby="password" placeholder="Password">
-                        </div>
-
-                        <div class="form-group pb-3">
-                          <label for="confirm-password">Confirm Password</label>
-                          <input type="text" class="form-control" id="confirm-password" name="confirm-password"
-                            aria-describedby="password" placeholder="Confirm Password">
-                        </div>
-
-                        <div class="text-center mt-4 pt-4 mb-4">
-                          <input type="submit" value="Register" class="min-width-260 btn btn-primary btn-lg">
-                          <div class="pt-3">
-                            <a href="#" class="custom-link custom-link-2 "><i class="mdi mdi-help-circle-outline mr-1"
-                                aria-hidden="true"></i>
-                              Disclaimer</a>
-                          </div>
+                        <div class="select-a-plan__content__img-unit">
+                          GB
                         </div>
                       </div>
-
-
-
-                    </form>
+                    </div>
+                    <h3 class="title-3 mt-4 mb-0">Faith <span class="change-value-count">1</span><span
+                        class="change-value-unit">GB</span></h3>
+                    <div class="subtitle text-green-light extrabold mb-5">$<span
+                        class="change-value-price">25.00</span>/mo</div>
+                    <div class="row">
+                      <div class="col-4">
+                        <img src="./images/plan__icon__talks.svg" class="height-74" alt="">
+                        <h4 class="subtitle-3 extrabold text-black mt-3">Unlimited <br> Talk</h4>
+                      </div>
+                      <div class="col-4">
+                        <img src="./images/plan__icon__text.svg" class="height-74" alt="">
+                        <h4 class="subtitle-3 extrabold text-black mt-3">Unlimited <br> Text</h4>
+                      </div>
+                      <div class="col-4">
+                        <img src="./images/plan__icon__data.svg " class="height-74" alt="">
+                        <h4 class="subtitle-3 extrabold text-black mt-3">
+                          <div><span class="change-value-count">1</span><span class="change-value-unit">GB</span></div>
+                          Data
+                        </h4>
+                      </div>
+                    </div>
+                    <div class="btn-container pt-4 mt-2">
+                      <input type="submit" class="btn btn-primary min-width-260" value="Choose">
+                    </div>
                   </div>
+
+
                 </div>
               </div>
             </div>
