User Frontend - Add Plan ID

--- a/Admin Panel/dashboard.html
+++ b/Admin Panel/dashboard.html
@@ -23,9 +23,19 @@
         </button>
         <nav>
           <ul class="nav flex-column">
-            <li class="active"><a class="nav-link active" href="#"> <i class="mdi mdi-view-dashboard"
+            <li class="active"><a class="nav-link active" href="#" data-toggle="collapse" href="#collapseExample"
+                role="button" aria-expanded="false" aria-controls="collapseExample"> <i class="mdi mdi-view-dashboard"
                   aria-hidden="true"></i>
-                <span>Dashboard</span></a></li>
+                <span>Dashboard</span></a>
+              <ul class="collapse" id="collapseExample">
+                <li><a class="nav-link active" href="#"> <i class="mdi mdi-cog-outline" aria-hidden="true"></i>
+                    <span>Settings</span></a></li>
+                <li><a class="nav-link active" href="#"> <i class="mdi mdi-cog-outline" aria-hidden="true"></i>
+                    <span>Settings</span></a></li>
+                <li><a class="nav-link active" href="#"> <i class="mdi mdi-cog-outline" aria-hidden="true"></i>
+                    <span>Settings</span></a></li>
+              </ul>
+            </li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-cog-outline" aria-hidden="true"></i>
                 <span>Settings</span></a></li>
             <li><a class="nav-link active" href="#"> <i class="mdi mdi-sticker-outline" aria-hidden="true"></i>
