User Fronted -  Internal Updates
 BTN links fixed, Loading added, Terms and Conditions + Privacy Policy Added

--- a/Frontend/check_your_device.html
+++ b/Frontend/check_your_device.html
@@ -237,6 +237,7 @@
         <span aria-hidden="true">&times;</span></button>
       <div class="sidebard-OS__content__item " id="on__ios">
         <img src="./images/iphone.png" class="img-fluid mt-4" alt="">
+
         <h2 class="title-3 text-center mt-5">IOS Apple</h2>
         <h3 class="subtitle-2 text-center mb-5">Find It Within Your <br> Device</h3>
         <ul class="sidebard-OS__content__list">
@@ -248,36 +249,56 @@
         <button type="button" class="close-2 btn btn-lg min-width-260 mt-5">Got it</button>
       </div>
       <div class="sidebard-OS__content__item " id="on__android">
-        <img src="./images/iphone.png" class="img-fluid mt-4" alt="">
-        <h2 class="title-3 text-center mt-5">IOS Apple</h2>
-        <h3 class="subtitle-2 text-center mb-5">Find It Within Your <br> Device</h3>
+        <!-- <img src="./images/iphone.png" class="img-fluid mt-4" alt=""> -->
+        <h2 class="title-3 text-center mt-5">Android</h2>
+        <h3 class="subtitle-2 text-center mb-5">Option 1 - Find It Within Your  Device</h3>
         <ul class="sidebard-OS__content__list">
-          <li class="sidebard-OS__content__list__item">From Your Home Screen, Select <b>"Settings"</b></li>
-          <li class="sidebard-OS__content__list__item">Select <b>"General"</b></li>
-          <li class="sidebard-OS__content__list__item">Select <b>"About"</b></li>
+          <li class="sidebard-OS__content__list__item">From Your Home Screen, Select <b>"Menu"</b>.</li>
+          <li class="sidebard-OS__content__list__item">Select <b>"Settings"</b></li>
+          <li class="sidebard-OS__content__list__item">Select <b>"About Phone"</b></li>
+          <li class="sidebard-OS__content__list__item">Select <b>"Status"</b></li>
           <li class="sidebard-OS__content__list__item">Scroll Down To The IMEI, ESN Or MEID Number</li>
+        </ul>
+        <h3 class="subtitle-2 text-center mb-4 mt-5">Option 2 - Find It On The Outside Of Your Device</h3>
+        <ul class="sidebard-OS__content__list">
+          <li class="sidebard-OS__content__list__item">Remove The Battery From Your Device.</li>
+          <li class="sidebard-OS__content__list__item">Locate The IMEI, ESN Or MEID Number On The Inside Of Your Device. See The Image For Reference.</li>
+
         </ul>
       </div>
       <div class="sidebard-OS__content__item " id="on__windows">
-        <img src="./images/iphone.png" class="img-fluid mt-4" alt="">
-        <h2 class="title-3 text-center mt-5">IOS Apple</h2>
-        <h3 class="subtitle-2 text-center mb-5">Find It Within Your <br> Device</h3>
+        <!-- <img src="./images/iphone.png" class="img-fluid mt-4" alt=""> -->
+        <h2 class="title-3 text-center mt-5">Windows Phone</h2>
+        <h3 class="subtitle-2 text-center mb-5">Option 1 - Find It Within Your  Device</h3>
         <ul class="sidebard-OS__content__list">
-          <li class="sidebard-OS__content__list__item">From Your Home Screen, Select <b>"Settings"</b></li>
-          <li class="sidebard-OS__content__list__item">Select <b>"General"</b></li>
-          <li class="sidebard-OS__content__list__item">Select <b>"About"</b></li>
-          <li class="sidebard-OS__content__list__item">Scroll Down To The IMEI, ESN Or MEID Number</li>
+          <li class="sidebard-OS__content__list__item">From Start Screen, Select The Right Arrow (Located In The Upper-Right).</li>
+          <li class="sidebard-OS__content__list__item">Select <b>"Settings"</b></li>
+          <li class="sidebard-OS__content__list__item">Select <b>"About Phone"</b></li>
+          <li class="sidebard-OS__content__list__item">Select 'More Info' And The MEID Number Will Appear.</b></li>
+
+        </ul>
+        <h3 class="subtitle-2 text-center mb-4 mt-5">Option 2 - Find It On The Outside Of Your Device</h3>
+        <ul class="sidebard-OS__content__list">
+          <li class="sidebard-OS__content__list__item">Remove The Battery From Your Device.</li>
+          <li class="sidebard-OS__content__list__item">Locate The IMEI, ESN Or MEID Number On The Inside Of Your Device. See The Image For Reference.</li>
         </ul>
       </div>
       <div class="sidebard-OS__content__item " id="basic__phone">
-        <img src="./images/iphone.png" class="img-fluid mt-4" alt="">
-        <h2 class="title-3 text-center mt-5">IOS Apple</h2>
-        <h3 class="subtitle-2 text-center mb-5">Find It Within Your <br> Device</h3>
+        <!-- <img src="./images/iphone.png" class="img-fluid mt-4" alt=""> -->
+        <h2 class="title-3 text-center mt-5">Basic Phone</h2>
+        <h3 class="subtitle-2 text-center mb-5">Option 1 - Find It On The Outside Of Your Device</h3>
         <ul class="sidebard-OS__content__list">
-          <li class="sidebard-OS__content__list__item">From Your Home Screen, Select <b>"Settings"</b></li>
-          <li class="sidebard-OS__content__list__item">Select <b>"General"</b></li>
-          <li class="sidebard-OS__content__list__item">Select <b>"About"</b></li>
-          <li class="sidebard-OS__content__list__item">Scroll Down To The IMEI, ESN Or MEID Number</li>
+          <li class="sidebard-OS__content__list__item">Remove The Battery From Your Device.</li>
+          <li class="sidebard-OS__content__list__item">Locate The IMEI, ESN, Or MEID Number On The Inside Of Your Device. See Image For Reference.</li>
+        </ul>
+        <h3 class="subtitle-2 text-center mb-4 mt-5">Option 2 - Find It On Your Device’s Packaging</h3>
+        <ul class="sidebard-OS__content__list">
+          <li class="sidebard-OS__content__list__item">Check The Inside And Outside Of The Box Your Device Came In For The MEID, ESN Or IMEI.</li>
+        </ul>
+        <h3 class="subtitle-2 text-center mb-4 mt-5">Option 3 - Find It On Your Device’s Receipt</h3>
+        <ul class="sidebard-OS__content__list">
+          <li class="sidebard-OS__content__list__item">Review The Device’s Purchase Receipt For A Number Labeled MEID, ESN Or IMEI.
+          </li>
         </ul>
       </div>
 
