--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div class="loading">
+    <img src="./images/logo_header.svg" alt="">
+  </div>
   <div class="body">
     <div class="main-container ">
       <header class="main-nav fixed-top">
@@ -141,7 +144,7 @@
                       <li><i class="mdi mdi-check-circle-outline" aria-hidden="true"></i> Unlimited Text</li>
                       <li><i class="mdi mdi-check-circle-outline" aria-hidden="true"></i> 1GB Data</li>
                     </ul>
-                    <a href="" class="btn mb-4">Learn More</a>
+                    <a href="" class="btn mb-4 btn-primary">Learn More</a>
                   </div>
                 </div>
               </div>
