Add a fixed for small btn and some img added to Check your device sc

--- a/Frontend/billing_info.html
+++ b/Frontend/billing_info.html
@@ -216,7 +216,7 @@
                     <div class="card-content-header align-items-center">
                       <h3 class="mb-0">Shipping address <a href="#" class="text-color-green-light"></a></h3>
                       <div class="card-content-header__actions">
-                        <button type="button" id="export-data" class="btn btn-sm btn-primary"><span>Add</span> </button>
+                        <a href="#" id="export-data" class="btn btn-sm btn-primary"><span>Add</span> </a>
 
                       </div>
                     </div>
