--- a/Frontend/check_your_device.html
+++ b/Frontend/check_your_device.html
@@ -249,7 +249,7 @@
         <button type="button" class="close-2 btn btn-lg min-width-260 mt-5">Got it</button>
       </div>
       <div class="sidebard-OS__content__item " id="on__android">
-        <!-- <img src="./images/iphone.png" class="img-fluid mt-4" alt=""> -->
+        <img src="./images/android.png" class="img-fluid mt-4" alt="">
         <h2 class="title-3 text-center mt-5">Android</h2>
         <h3 class="subtitle-2 text-center mb-5">Option 1 - Find It Within Your  Device</h3>
         <ul class="sidebard-OS__content__list">
@@ -267,7 +267,7 @@
         </ul>
       </div>
       <div class="sidebard-OS__content__item " id="on__windows">
-        <!-- <img src="./images/iphone.png" class="img-fluid mt-4" alt=""> -->
+        <img src="./images/window_phone.png" class="img-fluid mt-4" alt="">
         <h2 class="title-3 text-center mt-5">Windows Phone</h2>
         <h3 class="subtitle-2 text-center mb-5">Option 1 - Find It Within Your  Device</h3>
         <ul class="sidebard-OS__content__list">
@@ -284,7 +284,7 @@
         </ul>
       </div>
       <div class="sidebard-OS__content__item " id="basic__phone">
-        <!-- <img src="./images/iphone.png" class="img-fluid mt-4" alt=""> -->
+        <img src="./images/basic_phone.png" class="img-fluid mt-4" alt="">
         <h2 class="title-3 text-center mt-5">Basic Phone</h2>
         <h3 class="subtitle-2 text-center mb-5">Option 1 - Find It On The Outside Of Your Device</h3>
         <ul class="sidebard-OS__content__list">
