--- a/Frontend/shopping_checkout.html
+++ b/Frontend/shopping_checkout.html
@@ -159,19 +159,43 @@
 
                 <div class="row mb-3">
                   <div class="col-8">
-                    <a href="#" class="custom-link font-16"><img src="./images/arrow_down__checkout.svg" alt="" class="width-20 mr-2">Total</a>
+                    <a data-toggle="collapse" data-target="#showtotals" href="#showtotals" role="button" aria-expanded="false" aria-controls="showtotals" class="custom-link font-16"><img src="./images/arrow_down__checkout.svg" alt="" class="width-20 mr-2">Total</a>
                   </div>
                   <div class="col-4 text-right font-weight-bold">
                     $0.00
+                  </div>
+                  <div class="col-12">
+                    <div class="collapse" id="showtotals">
+                      <div class="row mb-3 pt-3 align-items-center">
+                        <div class="col-8 text-sm-1">
+                          Sim Card
+                        </div>
+                        <div class="col-4  text-right text text-sm-1">
+                          $0.00
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <hr>
                 <div class="row mb-3">
                   <div class="col-8">
-                    <a href="#" class="custom-link font-16"><img src="./images/arrow_down__checkout.svg" alt="" class="width-20 mr-2">Recurring Total</a>
+                    <a data-toggle="collapse" data-target="#showtotals2" href="#showtotals2" role="button" aria-expanded="false" aria-controls="showtotals2" class="custom-link font-16"><img src="./images/arrow_down__checkout.svg" alt="" class="width-20 mr-2">Recurring Total</a>
                   </div>
                   <div class="col-4 text-right font-weight-bold">
                     $51.00/mo
+                  </div>
+                  <div class="col-12">
+                    <div class="collapse" id="showtotals2">
+                      <div class="row mb-3 pt-3 align-items-center">
+                        <div class="col-8 text-sm-1">
+                          Sim Card
+                        </div>
+                        <div class="col-4  text-right text text-sm-1">
+                          $0.00
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
